--- a/public/css/estilo_tienda.css
+++ b/public/css/estilo_tienda.css
@@ -183,7 +183,7 @@ header h1{
     color: white;
     margin-bottom: 10px;
 }
-.carrito-total .btn-pagar{
+.carrito-total .btn-pago{
     display: block;
     width: 100%;
     border: none;
